# precipapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/integrations/usgs/: client.py
backend/: pyproject.toml
backend/app/: __init__.py  base.py  main.py
backend/app/integrations/usgs/: client.py  models.py
backend/app/models/: exceptions.py  models.py
backend/app/routers/: water_data.py
backend/sample_data/: usgs_response_sample.json
backend/scripts/: debug_usgs_client.py  debug_usgs_request.py
backend/tests/: test_integration.py
backend/tests/integrations/usgs/: test_integration.py
frontend/: package-lock.json  package.json
